# poc

pantheon-main/pantheon-main/: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.temporal  Makefile  README.md  docker-compose-dev.yaml  docker-compose.yaml  gunicorn_conf.py  pyproject.toml  pytest.ini  tests.sh
pantheon-main/pantheon-main/.github/workflows/: dev-build-deploy.yml  prd-build-deploy.yaml  pre-commit.yaml  semgrep-scan-diff.yaml  stg-build-deploy-v2.yaml  stg-build-deploy.yaml  stg-integration-tests.yaml  sync-develop-branch.yaml  tests-and-coverage.yaml
pantheon-main/pantheon-main/helm/: dev-values.yaml  prd-values.yaml  stg-values.yaml
pantheon-main/pantheon-main/pantheon/: __init__.py  app.py
pantheon-main/pantheon-main/pantheon/ai_agents/: agent_service.py  context.json
pantheon-main/pantheon-main/pantheon/chat/: __init__.py  chat_controller.py
pantheon-main/pantheon-main/pantheon/middlewares/: __init__.py  logging_middleware.py
pantheon-main/pantheon-main/pantheon/routers/: __init__.py
pantheon-main/pantheon-main/pantheon/settings/: logging.py  settings.py
pantheon-main/pantheon-main/pantheon/tests/: test_app.py  test_chat_controller.py  test_requests_util.py
pantheon-main/pantheon-main/pantheon/utils/: requests.py  utils.py
pantheon-main/pantheon-main/pantheon_v2/: app.py
pantheon-main/pantheon-main/pantheon_v2/processes/: __init__.py
pantheon-main/pantheon-main/pantheon_v2/settings/: logging.py  settings.py
pantheon-main/pantheon-main/pantheon_v2/tests/: integration_tests.py
(+276 files in other folders)
